--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cuid": "^3.0.0",
     "dotenv": "^16.4.7",
     "mysql": "^2.18.1",
-    "next": "15.1.0",
+    "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
